--- a/public/Contact Us.html
+++ b/public/Contact Us.html
@@ -4,8 +4,8 @@
         <title>Naresh It Technologies</title>
         <meta charset="UTF=8">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body id="body">
@@ -25,7 +25,7 @@
                 <img src="../Images/contactus3.jpg" class="p-1 border border-2 rounded rounded-3" id="contact-img"  height="350px" width="85%">
             </div><br><br>
         </div>
-        <scrpit src="../node_modules/jquery/dist/jquery.js"></scrpit>
-        <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>        
     </body>
 </html>
