--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2 align="center"><b>Naresh Institute and Technologies</b></h2><br>
             <nav class="navbar-header   navbar-expand-lg navbar-dark bg-dark rounded rounded-3">
                 <div class="container-fluid">
-                    <div class="navbar-nav  collapse  navbar-collaps" id="menu">
+                    <div class="navbar-nav  collapse  navbar-collapse" id="menu">
                         <div class="navbar-nav nav  nav-tabs navbar-left navbar-collapse">
                             <div class="nav-item">
                                 <a href="./public/Home.html" target="framebody" class="nav-link" data-bs-toggle="tabs"><span class="bi bi-house-fill"></span> Home</a>
